# iris-simp-lang

./: .gitignore  LICENSE  Makefile  README.md  _CoqProject  iris-simp-lang.opam
.github/workflows/: build.yml
src/: adequacy.v  class_instances.v  heap_lib.v  heap_ra.v  heap_ra2.v  lang.v  notation.v  primitive_laws.v  proofmode.v  simp.v  tactics.v
src/examples/: par.v  parallel_add.v  spawn.v  swap.v
tutorial/: README.md
