opam-version: "2.0"
maintainer: "tchajed@mit.edu"
version: "dev"

homepage: "https://github.com/tchajed/iris-simp-lang"
dev-repo: "git+https://github.com/tchajed/iris-simp-lang.git"
bug-reports: "https://github.com/tchajed/iris-simp-lang/issues"
license: "MIT"

synopsis: "Simple language to demo instantiating Iris"
description: """
Iris allows supports a generic language interface, often instantiated using
HeapLang. Here we instantiate that interface with a bare minimum of features,
simplifying compared to HeapLang.
"""

depends: [
  "coq" {>= "8.13"}
  "coq-iris" {>= "dev.2021-09-01.0.55cd1cc9" | (> "3.5.0" & < "4.0") | = "dev"}
]

build: [make "-j%{jobs}%"]
install: [make "install"]

tags: [
  "category:Miscellaneous"
  "keyword:iris"
  "logpath:iris_simp_lang"
]

authors: [
  "Tej Chajed"
]
